--- a/deep-reader-app/package.json
+++ b/deep-reader-app/package.json
@@ -13,7 +13,8 @@
     "epubjs": "^0.3.93",
     "pocketbase": "^0.26.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
